--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -12,14 +12,14 @@
 		<string>page2</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<false/>
+	<true/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
 	<real>248</real>
 	<key>selectedItems</key>
 	<array>
-		<string>page16</string>
+		<string>page91</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
