update Talkboctopus page
add sign-up link for Google form; add talk title and abstract for Bassett

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-0026-Programs/ChildPages/2-Seminars-0026-Tutorials/ChildPages/1-Talkboctopus/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-0026-Programs/ChildPages/2-Seminars-0026-Tutorials/ChildPages/1-Talkboctopus/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-08-26T21:10:34Z</date>
+						<date>2022-09-07T17:52:21Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -984,11 +984,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								cdgaEDB4aiQt
-								vTMd7mfabg==
+								MGJ8fyDIhS43
+								1RM17JW6Ow==
 								</data>
 								<key>Size</key>
-								<integer>518744</integer>
+								<integer>519775</integer>
 							</dict>
 							<key>files/stacks_page_page91.js</key>
 							<dict>
@@ -1004,11 +1004,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sPnMakgvYOWp
-								c2f55FNx+Q==
+								/1VhSrf5vNog
+								/IaqpQBmHA==
 								</data>
 								<key>Size</key>
-								<integer>342509</integer>
+								<integer>345146</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
