--- a/vermontcomplexsystems-foundation.rw8/Pages/09-People/ChildPages/1-Core-Team/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/09-People/ChildPages/1-Core-Team/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-09-12T15:06:08Z</date>
+						<date>2022-09-13T15:34:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -350,6 +350,16 @@
 								<key>Size</key>
 								<integer>11901</integer>
 							</dict>
+							<key>files/stacks-image-6ba828e-200x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								KPg7lMYJxyoZ
+								cklFn8KmZQ==
+								</data>
+								<key>Size</key>
+								<integer>102100</integer>
+							</dict>
 							<key>files/stacks-image-6c21b97.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -459,6 +469,16 @@
 								</data>
 								<key>Size</key>
 								<integer>11665</integer>
+							</dict>
+							<key>files/stacks-image-826277d-300x148.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								MXO10J4T3jIu
+								0ApNz7gh5g==
+								</data>
+								<key>Size</key>
+								<integer>93954</integer>
 							</dict>
 							<key>files/stacks-image-8809727.jpg</key>
 							<dict>
@@ -780,35 +800,45 @@
 								<key>Size</key>
 								<integer>342856</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wgmIAuepvJFg
+								INqwDCfPXQ==
+								</data>
+								<key>Size</key>
+								<integer>1879</integer>
+							</dict>
 							<key>files/stacks_page_page37.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								KszPJkpoFyc7
-								B6nxMe9gaA==
+								dgxh0FE9JMKh
+								FqusT4I0+w==
 								</data>
 								<key>Size</key>
-								<integer>410340</integer>
+								<integer>415209</integer>
 							</dict>
 							<key>files/stacks_page_page37.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								A5DNKRJ+fiDJ
-								ckg7+dy0uw==
+								RxPT3F/zsIgR
+								QzJa3s0L7w==
 								</data>
 								<key>Size</key>
-								<integer>28593</integer>
+								<integer>28754</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								hjgsJUJ+ST8v
-								8N8PcS7yZw==
+								fdtKxr6FK9Fb
+								rp+SglCpYA==
 								</data>
 								<key>Size</key>
-								<integer>316561</integer>
+								<integer>324192</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
