--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -12,16 +12,14 @@
 		<string>page2</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<true/>
+	<false/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
 	<real>248</real>
-	<key>selectedInspectorTab</key>
-	<string>info</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page9</string>
+		<string>page37</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
