update External Faculty page
update background color on lightbox content on External Faculty page

--- a/vermontcomplexsystems-foundation.rw8/Pages/09-People/ChildPages/2-External-Faculty-/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/09-People/ChildPages/2-External-Faculty-/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-09-12T15:06:07Z</date>
+						<date>2022-09-14T17:31:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,121 +94,121 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IcNwF63W2BhA
-								bgiwuWoxZw==
+								AjyATyENrYfG
+								9BaEyC3oVQ==
 								</data>
 								<key>Size</key>
-								<integer>17164</integer>
+								<integer>17171</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								nc/RlhmvGDDL
-								K+SuTjMLPQ==
+								JV5ejNT3Y8/E
+								W0wI16l5/Q==
 								</data>
 								<key>Size</key>
-								<integer>35262</integer>
+								<integer>35252</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								tvAomUQyeND0
-								vTpTZz/VVg==
+								Su+ZpJd1NY34
+								s0J16tjsFg==
 								</data>
 								<key>Size</key>
-								<integer>68367</integer>
+								<integer>68409</integer>
 							</dict>
 							<key>files/stacks-image-1002011-300x350.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								p2bVewFfyZsh
-								hml2nFsL9A==
+								oIHPLK1OI6Xj
+								OcKHM2tjTw==
 								</data>
 								<key>Size</key>
-								<integer>163103</integer>
+								<integer>163142</integer>
 							</dict>
 							<key>files/stacks-image-1002011-300x350@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								mXB5vmNr3KHF
-								m2j8g2dVGw==
+								G2KwjMw4Msgz
+								rIFvhB7xYw==
 								</data>
 								<key>Size</key>
-								<integer>564701</integer>
+								<integer>564769</integer>
 							</dict>
 							<key>files/stacks-image-2802bbf-300x350.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Z7eo5fVEC4MN
-								bYxaDQyY7w==
+								kPHBpX0tOyGr
+								rgXiB7DudA==
 								</data>
 								<key>Size</key>
-								<integer>17936</integer>
+								<integer>17933</integer>
 							</dict>
 							<key>files/stacks-image-2c86e5c-300x350.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								H/uUhMlePw/6
-								YYtZBdP+yw==
+								Fz8gsX4sLDMN
+								dDm1hesYLw==
 								</data>
 								<key>Size</key>
-								<integer>27642</integer>
+								<integer>27051</integer>
 							</dict>
 							<key>files/stacks-image-2c86e5c-300x350@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZWjpvnCgWpxq
-								RkB8KWYdtg==
+								a4KkjJsAHZrl
+								fPKb7rYHmg==
 								</data>
 								<key>Size</key>
-								<integer>43445</integer>
+								<integer>45022</integer>
 							</dict>
 							<key>files/stacks-image-3132463-300x300.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								bwECNX0HVYRM
-								5W3rx0Wtqw==
+								p726uUF2dlJR
+								ELdKVBQU3Q==
 								</data>
 								<key>Size</key>
-								<integer>15655</integer>
+								<integer>15656</integer>
 							</dict>
 							<key>files/stacks-image-3eb7b3f-300x350.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								itI+kIGWNixQ
-								oBbMChJ1iA==
+								l0ms6z6wRf55
+								6G0/AT1auA==
 								</data>
 								<key>Size</key>
-								<integer>34954</integer>
+								<integer>34963</integer>
 							</dict>
 							<key>files/stacks-image-3f16e60-300x298.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								3Cf/kxsYR4wh
-								gc+E9bg/bQ==
+								HSjC0sHmXgub
+								qgte7qQI3w==
 								</data>
 								<key>Size</key>
-								<integer>22857</integer>
+								<integer>22488</integer>
 							</dict>
 							<key>files/stacks-image-3f16e60-300x298@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								9YApVlMrwpRw
-								Ydo4n4EqQQ==
+								4hDNsyorD5MD
+								QTNuX2Wq1Q==
 								</data>
 								<key>Size</key>
-								<integer>36271</integer>
+								<integer>36931</integer>
 							</dict>
 							<key>files/stacks-image-4763906.jpg</key>
 							<dict>
@@ -234,41 +234,41 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uosZppU2i+WJ
-								mP6fhL4cTg==
+								mlYOVaYFHTuX
+								gWK+2n5/iw==
 								</data>
 								<key>Size</key>
-								<integer>12228</integer>
+								<integer>12249</integer>
 							</dict>
 							<key>files/stacks-image-5197a6d-300x200@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								UN7aiw9pa1nT
-								lPwR1qz9zg==
+								mrXLaYxalt/b
+								0z9/iqXAHA==
 								</data>
 								<key>Size</key>
-								<integer>16974</integer>
+								<integer>17006</integer>
 							</dict>
 							<key>files/stacks-image-5518809-300x256.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								m7RB2S1Q2d9u
-								gNaK1MHmzg==
+								5J65SV8/66H9
+								NaJDpRWeMA==
 								</data>
 								<key>Size</key>
-								<integer>30892</integer>
+								<integer>30907</integer>
 							</dict>
 							<key>files/stacks-image-5518809-300x256@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								rGrMZ9fIG5/d
-								wCj5TBicVQ==
+								4NetCrzPEA7/
+								fRx6xrb0SQ==
 								</data>
 								<key>Size</key>
-								<integer>53383</integer>
+								<integer>53372</integer>
 							</dict>
 							<key>files/stacks-image-5d54d29.jpg</key>
 							<dict>
@@ -284,238 +284,238 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1Z6PGmXZh44d
-								h6q++YpI2Q==
+								KcaeZoqiWTh5
+								uCqRQ4HYHQ==
 								</data>
 								<key>Size</key>
-								<integer>171261</integer>
+								<integer>171280</integer>
 							</dict>
 							<key>files/stacks-image-5d6979e-300x322@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								UyQMZjnI94EF
-								Sn+bs1QOCg==
+								sp2k7+WjOQ6Z
+								WgHrjltK4w==
 								</data>
 								<key>Size</key>
-								<integer>672561</integer>
+								<integer>672463</integer>
 							</dict>
 							<key>files/stacks-image-65a350f-300x350.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								bUROxmXu1jFB
-								FsJCPyQQlQ==
+								VqcpG32xjkOk
+								kwY3KiuNGQ==
 								</data>
 								<key>Size</key>
-								<integer>26478</integer>
+								<integer>26502</integer>
 							</dict>
 							<key>files/stacks-image-65a350f-300x350@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								QDIy/TeXrxTU
-								jaVJXjj3Jw==
+								3O0nB7zO1rci
+								hckLZipNTw==
 								</data>
 								<key>Size</key>
-								<integer>47717</integer>
+								<integer>47735</integer>
 							</dict>
 							<key>files/stacks-image-662401b-300x350.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								PHkttipl3MsR
-								C6aReQzM5g==
+								xMydPNnDiAov
+								TWZff6Frew==
 								</data>
 								<key>Size</key>
-								<integer>38606</integer>
+								<integer>38633</integer>
 							</dict>
 							<key>files/stacks-image-6af183c-300x350.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								0rkSKKi8sPfB
-								LiNCX386Bg==
+								lkwGTwsAlLS2
+								Hh4dqHYwFw==
 								</data>
 								<key>Size</key>
-								<integer>226641</integer>
+								<integer>226670</integer>
 							</dict>
 							<key>files/stacks-image-6d9ca75-300x350.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								GZC68mBjc5Kj
-								CeKdb45CEw==
+								VhRMnLzELn7H
+								F4AmKKZgOw==
 								</data>
 								<key>Size</key>
-								<integer>18139</integer>
+								<integer>18132</integer>
 							</dict>
 							<key>files/stacks-image-78bb7b9-300x324.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								zFd2+ko1doHE
-								az7iwynNYw==
+								tFRzvljKdIDx
+								QcUrh/EO7w==
 								</data>
 								<key>Size</key>
-								<integer>151342</integer>
+								<integer>151225</integer>
 							</dict>
 							<key>files/stacks-image-78bb7b9-300x324@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Iu0eJ5jpEVay
-								Kz4f/sx2Sw==
+								OEa7kTrpazY+
+								N/CDnfa/6w==
 								</data>
 								<key>Size</key>
-								<integer>517728</integer>
+								<integer>517488</integer>
 							</dict>
 							<key>files/stacks-image-79fb775-300x350.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZagjqDoql8wu
-								OhdZuM7jsw==
+								8Dafj4k6LqPP
+								PScp36nl3g==
 								</data>
 								<key>Size</key>
-								<integer>20511</integer>
+								<integer>20504</integer>
 							</dict>
 							<key>files/stacks-image-7f88ddc-300x350.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								x6FSFTLJzOC4
-								o35UH6OfmA==
+								mtJ+ulolkK8I
+								bExmF0C13g==
 								</data>
 								<key>Size</key>
-								<integer>24606</integer>
+								<integer>24614</integer>
 							</dict>
 							<key>files/stacks-image-8ae62b5-300x300.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								31dhvCVbRIUt
-								F7G1Cdn5Jw==
+								rcmT6D2PLv+r
+								/sYzL7OQxg==
 								</data>
 								<key>Size</key>
-								<integer>192101</integer>
+								<integer>192108</integer>
 							</dict>
 							<key>files/stacks-image-941e3da-300x198.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								QuWLrTIq+O9C
-								EaUig6Y6rw==
+								uibqY2LE8ZKh
+								29QfEaaUnA==
 								</data>
 								<key>Size</key>
-								<integer>8096</integer>
+								<integer>8097</integer>
 							</dict>
 							<key>files/stacks-image-972fdf4-300x300.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								cXbqfkVu6UdM
-								01uId2+K2w==
+								FSNxMBqg0HyN
+								evynKm3h9Q==
 								</data>
 								<key>Size</key>
-								<integer>36210</integer>
+								<integer>36219</integer>
 							</dict>
 							<key>files/stacks-image-9f7d73f-300x216.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								nVi+AVzApC11
-								BfzRjNOOXA==
+								AYrICCRnLRy8
+								USrJeCJ7wA==
 								</data>
 								<key>Size</key>
-								<integer>18998</integer>
+								<integer>18993</integer>
 							</dict>
 							<key>files/stacks-image-a2c194c-300x350.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								txRdmust9ot1
-								2D109+AiRg==
+								jdEYyNUUkm6L
+								h+fq0FGUGw==
 								</data>
 								<key>Size</key>
-								<integer>24398</integer>
+								<integer>24390</integer>
 							</dict>
 							<key>files/stacks-image-abbba8f-300x350.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								MOmh0x5eSLGI
-								S2Ec2GhhLg==
+								cWj53DhU/USk
+								/WCTAIkELg==
 								</data>
 								<key>Size</key>
-								<integer>189661</integer>
+								<integer>189722</integer>
 							</dict>
 							<key>files/stacks-image-abbba8f-300x350@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								h5CN5IveLmRD
-								FuqDOc+JdA==
+								5Iad/+MEFZbj
+								FuPm3cBdbA==
 								</data>
 								<key>Size</key>
-								<integer>716939</integer>
+								<integer>717000</integer>
 							</dict>
 							<key>files/stacks-image-bd6dcce-300x256.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								m7RB2S1Q2d9u
-								gNaK1MHmzg==
+								5J65SV8/66H9
+								NaJDpRWeMA==
 								</data>
 								<key>Size</key>
-								<integer>30892</integer>
+								<integer>30907</integer>
 							</dict>
 							<key>files/stacks-image-bd6dcce-300x256@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								rGrMZ9fIG5/d
-								wCj5TBicVQ==
+								4NetCrzPEA7/
+								fRx6xrb0SQ==
 								</data>
 								<key>Size</key>
-								<integer>53383</integer>
+								<integer>53372</integer>
 							</dict>
 							<key>files/stacks-image-c742e83-300x350.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								0r6n6AJYZDB8
-								73bNbdG+2w==
+								H0rfo2jILu4w
+								lrvOBLzFYQ==
 								</data>
 								<key>Size</key>
-								<integer>17231</integer>
+								<integer>17217</integer>
 							</dict>
 							<key>files/stacks-image-c742e83-300x350@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								LAffRMWYPbFt
-								uvR+x7qwhA==
+								oMMXsk/F7Jci
+								sKqarmd8/w==
 								</data>
 								<key>Size</key>
-								<integer>26679</integer>
+								<integer>26518</integer>
 							</dict>
 							<key>files/stacks-image-cd48b26-300x300.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								q2vgaYcHcHGs
-								8AkpBZN8tg==
+								ra3GzuZOASuG
+								oC6ScbKh4w==
 								</data>
 								<key>Size</key>
-								<integer>22321</integer>
+								<integer>22317</integer>
 							</dict>
 							<key>files/stacks-image-cd48b26-300x300@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								xFDFv6S1gk9G
-								6/7ynpF6Wg==
+								O491NxIYW9Eh
+								1XkvmCnArA==
 								</data>
 								<key>Size</key>
 								<integer>39700</integer>
@@ -534,71 +534,81 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6rywPUyf1hA2
-								CmKUdaVnZQ==
+								XH509kXvJ64r
+								Y7qCs0+W6g==
 								</data>
 								<key>Size</key>
-								<integer>31524</integer>
+								<integer>31510</integer>
 							</dict>
 							<key>files/stacks-image-e7c7152-300x312.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								wIlXDM4vboY1
-								ZUT6WdJ2zg==
+								o+0u4LTWxgKg
+								u519/NzwjQ==
 								</data>
 								<key>Size</key>
-								<integer>19356</integer>
+								<integer>18529</integer>
 							</dict>
 							<key>files/stacks-image-e7c7152-300x312@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								mFP8QOAujjjo
-								9ZEIkVVvzA==
+								Mbo+VX83CsfB
+								KAakf8ge/w==
 								</data>
 								<key>Size</key>
-								<integer>30729</integer>
+								<integer>31617</integer>
 							</dict>
 							<key>files/stacks-image-e97f241-400x164.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Hwezk6t72J5g
-								2awHy7YAqA==
+								0LBTZh9Y4iZ6
+								By0DZuC++A==
 								</data>
 								<key>Size</key>
-								<integer>19470</integer>
+								<integer>19463</integer>
 							</dict>
 							<key>files/stacks-image-f9bef41-300x350.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								4cWpb87C9J1Q
-								0XZrM2wMDQ==
+								LAWtFLazA4N3
+								/0WCwCkVMQ==
 								</data>
 								<key>Size</key>
-								<integer>20590</integer>
+								<integer>21093</integer>
 							</dict>
 							<key>files/stacks-image-f9bef41-300x350@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								qiqffTFIHDQq
-								uyCUTpA+Bw==
+								RJIdxv7DIaMG
+								3JBCbZiyuw==
 								</data>
 								<key>Size</key>
-								<integer>37517</integer>
+								<integer>36388</integer>
+							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wgmIAuepvJFg
+								INqwDCfPXQ==
+								</data>
+								<key>Size</key>
+								<integer>1879</integer>
 							</dict>
 							<key>files/stacks_page_page94.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								5Od81FdL46nD
-								swWmK0l65A==
+								RFU1Wd1vzbuk
+								79LCD6dNaA==
 								</data>
 								<key>Size</key>
-								<integer>301762</integer>
+								<integer>302383</integer>
 							</dict>
 							<key>files/stacks_page_page94.js</key>
 							<dict>
