--- a/vermontcomplexsystems-foundation.rw8/Pages/12-Archive/Data/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/12-Archive/Data/Contents.plist
@@ -13,70 +13,49 @@
 				<string>6054</string>
 				<key>markedImages</key>
 				<array>
-					<string>3864D235-C994-409A-8C17-C9E474EEEDAE.jpg</string>
-					<string>9F9480E3-825E-49A9-BE62-91ABE7AE14EF.jpg</string>
-					<string>D81CFEA9-0D0C-4A7E-8CC9-1C176891C73B.jpg</string>
-					<string>DA3D4D1E-301A-4E0B-B05E-FF6A7CB7EE2D.jpg</string>
-					<string>E97F2417-BD68-448C-91B7-0BE97DC867F8.png</string>
+					<string>31324638-3BBE-487D-93BF-4F11E3A034A5.jpeg</string>
+					<string>65A350F3-8CA7-42C0-8318-459A3D4D1686.jpg</string>
+					<string>ABBBA8F9-8C40-4B97-9F46-518FA07292DB.png</string>
+					<string>CF2D4794-07D7-41B9-86FD-77695D4B887A.jpeg</string>
+					<string>CD48B265-2BD2-4D9D-B03F-E9118D92D693.jpg</string>
+					<string>000B83CA-4AC9-454D-A310-C4487F46B045.jpg</string>
+					<string>6D9CA759-BA45-4FE8-80D7-3C714DD27F95.jpeg</string>
 					<string>BD6DCCEB-4D6F-4D66-ABDE-5B2889259233.jpg</string>
-					<string>23E18D91-83E9-4BF0-84E4-61870F57FBA0.jpg</string>
-					<string>9AA3771A-78A4-45EB-A734-5FF21DDB25D6.png</string>
-					<string>96F29BD8-BE6D-4E42-919A-08CFD40A3C07.png</string>
-					<string>ED7B2876-4BE0-492E-894D-AA0D5FB0A223.jpg</string>
-					<string>32EA8357-468A-4E2B-AC87-75819DD96CEA.png</string>
-					<string>3A6B16E2-5EFF-4584-BE98-BC7D56971CF7.jpg</string>
-					<string>1CE41F90-CE4E-436E-94E7-A0411FC17B85.jpg</string>
-					<string>94956B4E-F22E-46FB-98CE-A3ECD08F652A.jpg</string>
-					<string>6476CD39-2035-424C-998E-75A5FE452E98.jpg</string>
-					<string>FE073D30-EECA-4E38-B93D-14BDD29868E8.png</string>
-					<string>6BA828E3-1670-4019-BE35-3A06BC05E652.png</string>
-					<string>32939B0F-14EC-45F5-BA01-820C1E6DE3B9.jpg</string>
+					<string>4A1594E5-9A7A-4CE1-A91B-7FDCF6CF2118.jpg</string>
+					<string>5D54D29B-3CE4-48D5-A500-5E0413E4F0E6.jpeg</string>
+					<string>5D6979EA-DA17-41DA-807E-82B019D21F4D.png</string>
+					<string>C742E831-2408-4129-99DE-378B116F35C8.jpg</string>
+					<string>6AF183C4-BA54-4B9B-82F3-7EFD1210ABE2.png</string>
+					<string>A2C194C2-BC9D-4467-8AC9-E59DF68910D4.jpg</string>
 					<string>55188098-A056-4F69-BDC6-7E3F7DC3DBF5.jpg</string>
-					<string>4AFFA1A8-CB3F-4B5C-B105-90202A9EFEA6.jpg</string>
-					<string>47C83528-ED9A-4841-A0A3-FCE658098CC8.png</string>
-					<string>335560FB-6214-4FE8-A928-9BA1EAEE4DD3.png</string>
-					<string>71F3A33B-DA28-4208-9AFD-F19DE3003A47.png</string>
+					<string>8AE62B58-43EA-477E-BE0F-ECA2B66A63C1.png</string>
+					<string>47639060-5658-4AFB-AF03-B8673A325113.jpeg</string>
+					<string>9AA3771A-78A4-45EB-A734-5FF21DDB25D6.png</string>
+					<string>3F16E600-63B5-4697-9E9C-90B2C39D33C5.jpg</string>
+					<string>F9BEF410-C842-4764-8F5A-CAE3314E7718.jpeg</string>
 					<string>097FB8F5-4B66-4248-B7DB-A000DE0398F9.tif</string>
-					<string>6C21B97A-90B8-4ECC-8CA8-39B0F086BABB.jpg</string>
-					<string>F7808241-64B0-47F7-AC36-146761629C12.jpg</string>
-					<string>C752E2D7-F76C-406A-B36D-3CF37C0AA26C.jpg</string>
-					<string>7A83E22C-3938-4FE4-80E8-E08521F7B0B5.jpg</string>
-					<string>78405322-EC22-4272-B488-7437AC397C4B.jpg</string>
-					<string>F1B6C588-361E-4A0B-A686-B9FF22A86421.jpg</string>
-					<string>25EDEA54-03CA-44B6-83DC-327E11923035.jpg</string>
-					<string>1ACDB853-C8B2-4EB5-9E56-E523931C429F.jpg</string>
-					<string>9FE2EB2F-BCBA-4A24-9577-2047479B8C5D.jpg</string>
-					<string>59E1EC12-48DA-4BCD-B516-FD2566C83DFA.jpg</string>
-					<string>B258B0C6-CBF5-4CC1-8335-FDBDE31DB55C.jpg</string>
-					<string>93815B0D-CABB-4103-9A89-28E80A0C5E44.jpg</string>
-					<string>9421F770-7796-4D8E-A113-601C3EF9658A.jpg</string>
-					<string>628E6666-588A-4764-AE18-998B13AF8274.jpg</string>
-					<string>D4269A03-EC6B-4EBF-A2C6-412E2ADB17F8.jpg</string>
-					<string>6F950E8D-4B88-4899-8E85-73F5EDD49D5F.jpg</string>
-					<string>80DC7A90-FA19-4108-8A2E-CBA67E6EB5C0.jpg</string>
-					<string>88097277-E645-4DA7-8708-E5EBEEA35F7B.jpg</string>
-					<string>372AF0F8-8661-46A7-BBFA-6FAD527CF19A.jpg</string>
-					<string>7B8A9B00-D0A4-4818-8662-31ED3DF75A95.jpg</string>
-					<string>4A4C0EE3-A3EB-4F13-9CDF-F0541F00AE33.jpg</string>
-					<string>A6A8D210-3206-472C-B6FC-E2FC683623D5.jpg</string>
-					<string>AD0E117A-5760-4676-946B-8670E9B309CD.jpg</string>
-					<string>C52063CD-344D-4791-8EB3-8F7F05366AF1.jpg</string>
-					<string>F438BD35-09B9-4AC5-ABEE-0C6FCBE31978.jpg</string>
-					<string>39D2E389-2F1B-4F12-B722-42860E4D71A9.jpg</string>
+					<string>E7C71521-80E4-4B08-A56D-2A37160FBBE9.jpeg</string>
+					<string>972FDF40-19CE-4D0F-948B-86B6F39F9C66.jpeg</string>
+					<string>3EB7B3FC-EC2D-41D5-A33A-E134A6BBC96D.jpg</string>
+					<string>E97F2417-BD68-448C-91B7-0BE97DC867F8.png</string>
+					<string>7F88DDC1-24CA-4399-BC6D-047A991B0407.jpg</string>
+					<string>2C86E5CE-A924-4024-A18B-4381F724D6FF.jpg</string>
+					<string>5197A6DD-C38C-4541-9DDB-9DA1C80EB818.jpg</string>
+					<string>47C83528-ED9A-4841-A0A3-FCE658098CC8.png</string>
+					<string>78BB7B9E-8893-45C5-ACFF-6B77630178C9.png</string>
 					<string>D2D5121E-4C53-46A8-A306-23C8B6E642E7.png</string>
-					<string>826277DB-35F0-4610-95A5-E12197EDDC97.png</string>
-					<string>F2545488-DE4F-46ED-9171-A5CF164888B4.jpg</string>
-					<string>78534171-C217-4CA4-BF20-2C249566369F.jpg</string>
-					<string>4C0441DA-096B-4CA1-8C9B-87762414A5D4.jpg</string>
-					<string>F95F5DE5-CE6C-43D8-A49F-1E744D3BD78E.jpg</string>
-					<string>21519A5A-F478-4D5B-A04E-AB6AD0C298C4.jpg</string>
-					<string>65206A61-24EA-4C90-BCA0-2B21D607A433.jpg</string>
-					<string>178F5B26-E489-47C8-B1BE-4F9CCD2767BC.jpg</string>
-					<string>B1FD2725-3999-49C2-8A49-D6E0CD6D9815.jpg</string>
+					<string>32EA8357-468A-4E2B-AC87-75819DD96CEA.png</string>
+					<string>2802BBF8-89DC-4846-88FE-B51A65B81FA7.jpeg</string>
 					<string>921BAA7E-FDF7-4456-B843-2CED84DAF2D8.png</string>
+					<string>1002011B-38E7-4F16-B3B0-0D7B1F851B50.png</string>
+					<string>9F7D73F7-6DA9-4D12-B9EA-80A90994558A.jpg</string>
+					<string>662401BD-F0E6-49F0-9A07-B8B36A8D2733.jpeg</string>
+					<string>D60E596F-DE4B-419C-95AA-03498361B4B4.jpg</string>
+					<string>941E3DAD-0B50-4D64-BAC5-8BCF1063D43D.jpg</string>
+					<string>79FB775A-132F-4610-9223-BE7AFA99CEFA.jpg</string>
 				</array>
 				<key>previousImageLibraryPath</key>
-				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-09-13 #113332EA5</string>
+				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-09-14 #12583515A</string>
 				<key>stacks3</key>
 				<data>
 				YnBsaXN0MDDUAAEAAgADAAQABQAGAAcADFgkdmVyc2lv
